--- a/translations/de/weapons.phrases.tf.txt
+++ b/translations/de/weapons.phrases.tf.txt
@@ -496,6 +496,10 @@
 	{
 		"de"	"Der schnittig Gekleidete"
 	}
+	"TF_COZYCAMPER"
+	{
+		"de"	"Der Gemütliche Camper"
+	}
 	"TF_BALLBUSTER"
 	{
 		"de"	"Der Geschenkpapier-Meuchler"
