--- a/translations/ru/weapons.phrases.tf.txt
+++ b/translations/ru/weapons.phrases.tf.txt
@@ -496,6 +496,10 @@
 	{
 		"ru"	"Одетый с иголочки"
 	}
+	"TF_COZYCAMPER"
+	{
+		"ru"	"Набор для кемпинга"
+	}
 	"TF_BALLBUSTER"
 	{
 		"ru"	"Оберточный убийца"
