--- a/translations/tr/weapons.phrases.tf.txt
+++ b/translations/tr/weapons.phrases.tf.txt
@@ -496,6 +496,10 @@
 	{
 		"tr"	"JİLET GİBİ GİYİNEN"
 	}
+	"TF_COZYCAMPER"
+	{
+		"tr"	"MİSKİN KAMPÇI"
+	}
 	"TF_BALLBUSTER"
 	{
 		"tr"	"PAKETLEYİCİ SUİKASTÇİ"
