--- a/translations/fi/weapons.phrases.tf.txt
+++ b/translations/fi/weapons.phrases.tf.txt
@@ -454,7 +454,7 @@
 	}
 	"TF_UNARMEDCOMBAT"
 	{
-		"fi"	"Käsittämätön ase"
+		"fi"	"Kovakourainen käsittely"
 	}
 	"TF_VOODOOPIN"
 	{
@@ -495,6 +495,10 @@
 	"TF_SHARPDRESSER"
 	{
 		"fi"	"Pisteliäs pukeutuja"
+	}
+	"TF_COZYCAMPER"
+	{
+		"fi"	"Tyytyväinen telttailija"
 	}
 	"TF_BALLBUSTER"
 	{
