--- a/translations/zho/weapons.phrases.tf.txt
+++ b/translations/zho/weapons.phrases.tf.txt
@@ -246,7 +246,7 @@
 	}
 	"TF_LOCHNLOAD"
 	{
-		"zho"	"Loch-n-Load"
+		"zho"	"直擊榴彈"
 	}
 	"TF_WARRIORSSPIRIT"
 	{
@@ -495,6 +495,10 @@
 	"TF_SHARPDRESSER"
 	{
 		"zho"	"刺客袖劍"
+	}
+	"TF_COZYCAMPER"
+	{
+		"zho"	"舒適的露營家"
 	}
 	"TF_BALLBUSTER"
 	{
